--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-scripts": "0.9.x",
-    "react-timeago": "^4.4.0"
+    "timeago-react": "^3.0.0"
   },
   "devDependencies": {},
   "scripts": {
